[gd_scene load_steps=2 format=3 uid="uid://c8j5veq3qxnvs"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_0yvnj"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0yvnj")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
text = "SELECT DAY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Day1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Day 1: First Day"

[node name="Day2Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Day 2: Deadline Day"

[node name="Day3Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Day 3: Performance Review"

[node name="Day4Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Day 4: Corporate Takeover"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 120.0
offset_bottom = -20.0
grow_vertical = 0
text = "Back"